--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HVAT - Hyperspectral Annotation Tool</title>
+    <title>HVAT - Hyperspectral Vision Annotation Tool</title>
     <link data-trunk rel="rust" data-target-name="hvat" />
     <style>
-        body {
+        html, body {
             margin: 0;
             padding: 0;
+            width: 100%;
+            height: 100%;
             overflow: hidden;
             background-color: #1a1a1a;
             font-family: system-ui, -apple-system, sans-serif;
@@ -24,7 +26,7 @@
         canvas {
             display: block;
             width: 100%;
-            height: 100vh;
+            height: 100%;
         }
     </style>
 </head>
