minor bug fixing and cleanup

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         // Register Service Worker for PWA offline support
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('./sw.js')
                     .then((registration) => {
                         console.log('[PWA] Service Worker registered:', registration.scope);
 
